--- a/atkm/src/index.html
+++ b/atkm/src/index.html
@@ -3,14 +3,80 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Atomeek DataMatrix</title>
+  <title>ATK AI - Dashboard</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="ATK AI Dashboard - Interface moderne Angular 20">
+  <meta name="theme-color" content="#0d1117">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Material Icons (si nécessaire) -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Preload critical assets -->
+  <link rel="preload" href="assets/styles/atk.styles.css" as="style">
+
+  <style>
+    /* Critical CSS for initial load */
+    .app-loading {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: #0d1117;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: #e6edf3;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    }
+
+    .app-loading-spinner {
+      width: 48px;
+      height: 48px;
+      border: 3px solid #30363d;
+      border-top-color: #58a6ff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    .app-loading-text {
+      margin-top: 16px;
+      font-size: 14px;
+      color: #7d8590;
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <adm-root></adm-root>
+  <app-root>
+    <!-- Loading screen shown before Angular loads -->
+    <div class="app-loading">
+      <div class="app-loading-spinner"></div>
+      <div class="app-loading-text">Chargement d'ATK AI...<C'est vraiment un peu le Le temps reste/div>
+      </div>
+  </app-root>
+
+  <!-- Noscript message -->
+  <noscript>
+    <div style="padding: 20px; background: #da3633; color: white; text-align: center;">
+      JavaScript est requis pour utiliser cette application. Veuillez l'activer dans votre navigateur.
+    </div>
+  </noscript>
 </body>
 
 </html>
