launch stage 2 - html rebilt step 1 ---------------------------------------Refactor components to use external HTML templates for better maintainability and readability. Update index title for branding consistency. Adjust styles for suggestion buttons to enhance UI.

--- a/atkm/src/index.html
+++ b/atkm/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ATK AI - Dashboard</title>
+  <title>atkm. - Dashboard</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="ATK AI Dashboard - Interface moderne Angular 20">
