launch stage 2 - html rebilt step 2 ---------------------------------------refactor: update project references from atk.ai to atkm and improve styling

--- a/atkm/src/index.html
+++ b/atkm/src/index.html
@@ -3,24 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <title>atkm. - Dashboard</title>
+  <title>atkm - api management for data(s) ☣️ integration</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="ATK AI Dashboard - Interface moderne Angular 20">
   <meta name="theme-color" content="#0d1117">
-
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
   <!-- Material Icons (si nécessaire) -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <!-- Preload critical assets -->
-  <link rel="preload" href="assets/styles/atk.styles.css" as="style">
+  <!-- <link rel="preload" href="assets/styles/atk.styles.css" as="style"> -->
 
   <style>
     /* Critical CSS for initial load */
@@ -67,8 +63,8 @@
     <!-- Loading screen shown before Angular loads -->
     <div class="app-loading">
       <div class="app-loading-spinner"></div>
-      <div class="app-loading-text">Chargement d'ATK AI...<C'est vraiment un peu le Le temps reste/div>
-      </div>
+      <div class="app-loading-text">Chargement d'atk ...</div>
+    </div>
   </app-root>
 
   <!-- Noscript message -->
